target/classes/META-INF/jkube/openshift/location-soa-rest-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    jkube.io/git-url: https://github.com/abdelhamidfg/location-soap-rest.git
    app.openshift.io/vcs-uri: https://github.com/abdelhamidfg/location-soap-rest.git
    jkube.io/git-commit: 3f3224814619a6f554bcd744119c16d5c1472a55
    jkube.io/git-branch: main
  labels:
    app: location-soa-rest
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: location-soa-rest
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: location-soa-rest
    provider: jkube
    group: org.mycompany
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-ref: main
        jkube.io/git-url: https://github.com/abdelhamidfg/location-soap-rest.git
        app.openshift.io/vcs-uri: https://github.com/abdelhamidfg/location-soap-rest.git
        jkube.io/git-commit: 3f3224814619a6f554bcd744119c16d5c1472a55
        jkube.io/git-branch: main
      labels:
        rht.comp: spring-boot-camel-xml
        com.company: Red_Hat
        rht.prod_ver: "7.9"
        rht.comp_ver: ""
        rht.prod_name: Red_Hat_Integration
        app: location-soa-rest
        provider: jkube
        version: 1.0.0-SNAPSHOT
        group: org.mycompany
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: "{\"server\":{\"undertow\":{\"io-threads\":1, \"worker-threads\"\
            :2 }}}"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: location-soa-rest:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: spring-boot
        ports:
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8090
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: location-soa-rest:latest
    type: ImageChange
