target/classes/META-INF/jkube/openshift/location-soa-rest-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    prometheus.io/path: /metrics
    jkube.io/git-branch: main
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
    jkube.io/git-url: https://github.com/abdelhamidfg/location-soap-rest.git
    app.openshift.io/vcs-uri: https://github.com/abdelhamidfg/location-soap-rest.git
    jkube.io/git-commit: 3f3224814619a6f554bcd744119c16d5c1472a55
  labels:
    app: location-soa-rest
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: location-soa-rest
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: location-soa-rest
    provider: jkube
    group: org.mycompany
