target/classes/META-INF/jkube/openshift/location-soa-rest-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: location-soa-rest
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: location-soa-rest
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: location-soa-rest
